// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Environment checks > Zod checks/refinements > Snapshot control 'ZodEmail' definition 1`] = `
{
  "bag": {
    "format": "email",
    "pattern": /\\^\\(\\?!\\\\\\.\\)\\(\\?!\\.\\*\\\\\\.\\\\\\.\\)\\(\\[A-Za-z0-9_'\\+\\\\-\\\\\\.\\]\\*\\)\\[A-Za-z0-9_\\+-\\]@\\(\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
  },
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "string_format",
    "format": "email",
    "pattern": /\\^\\(\\?!\\\\\\.\\)\\(\\?!\\.\\*\\\\\\.\\\\\\.\\)\\(\\[A-Za-z0-9_'\\+\\\\-\\\\\\.\\]\\*\\)\\[A-Za-z0-9_\\+-\\]@\\(\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
    "type": "string",
  },
  "deferred": [],
  "onattach": [
    [Function],
    [Function],
  ],
  "parse": [Function],
  "pattern": /\\^\\(\\?!\\\\\\.\\)\\(\\?!\\.\\*\\\\\\.\\\\\\.\\)\\(\\[A-Za-z0-9_'\\+\\\\-\\\\\\.\\]\\*\\)\\[A-Za-z0-9_\\+-\\]@\\(\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
  "run": [Function],
  "traits": Set {
    "ZodEmail",
    "$ZodEmail",
    "$ZodStringFormat",
    "$ZodCheckStringFormat",
    "$ZodCheck",
    "$ZodString",
    "$ZodType",
    "ZodStringFormat",
    "_ZodString",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod checks/refinements > Snapshot control 'ZodNumber' definition 1`] = `
{
  "bag": {
    "format": "safeint",
    "maximum": 9007199254740991,
    "minimum": -9007199254740991,
    "pattern": /\\^\\\\d\\+\\$/,
  },
  "constr": [Function],
  "def": {
    "checks": [
      {
        "$schema": "https://json-schema.org/draft-2020-12/schema",
        "maximum": 9007199254740991,
        "minimum": -9007199254740991,
        "type": "integer",
      },
    ],
    "type": "number",
  },
  "deferred": [],
  "parse": [Function],
  "pattern": /\\^\\\\d\\+\\$/,
  "run": [Function],
  "traits": Set {
    "ZodNumber",
    "$ZodNumber",
    "$ZodType",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod checks/refinements > Snapshot control 'ZodNumberFormat' definition 1`] = `
{
  "bag": {
    "format": "safeint",
    "maximum": 9007199254740991,
    "minimum": -9007199254740991,
    "pattern": /\\^\\\\d\\+\\$/,
  },
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "number_format",
    "format": "safeint",
    "type": "number",
  },
  "deferred": [],
  "onattach": [
    [Function],
  ],
  "parse": [Function],
  "pattern": /\\^\\\\d\\+\\$/,
  "run": [Function],
  "traits": Set {
    "ZodNumberFormat",
    "$ZodNumber",
    "$ZodCheckNumberFormat",
    "$ZodCheck",
    "$ZodType",
    "ZodNumber",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod checks/refinements > Snapshot control 'ZodNumberFormat' definition 2`] = `
{
  "bag": {
    "format": "int32",
    "maximum": 2147483647,
    "minimum": -2147483648,
    "pattern": /\\^\\\\d\\+\\$/,
  },
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "number_format",
    "format": "int32",
    "type": "number",
  },
  "deferred": [],
  "onattach": [
    [Function],
  ],
  "parse": [Function],
  "pattern": /\\^\\\\d\\+\\$/,
  "run": [Function],
  "traits": Set {
    "ZodNumberFormat",
    "$ZodNumber",
    "$ZodCheckNumberFormat",
    "$ZodCheck",
    "$ZodType",
    "ZodNumber",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod checks/refinements > Snapshot control 'ZodNumberFormat' definition 3`] = `
{
  "bag": {
    "format": "safeint",
    "maximum": 1000,
    "minimum": -9007199254740991,
    "pattern": /\\^\\\\d\\+\\$/,
  },
  "check": [Function],
  "constr": [Function],
  "def": {
    "abort": false,
    "check": "number_format",
    "checks": [
      $ZodCheckLessThan {},
    ],
    "format": "safeint",
    "type": "number",
  },
  "deferred": [],
  "onattach": [
    [Function],
  ],
  "parse": [Function],
  "pattern": /\\^\\\\d\\+\\$/,
  "run": [Function],
  "traits": Set {
    "ZodNumberFormat",
    "$ZodNumber",
    "$ZodCheckNumberFormat",
    "$ZodCheck",
    "$ZodType",
    "ZodNumber",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod checks/refinements > Snapshot control 'ZodString' definition 1`] = `
{
  "bag": {
    "format": "email",
    "pattern": /\\^\\(\\?!\\\\\\.\\)\\(\\?!\\.\\*\\\\\\.\\\\\\.\\)\\(\\[A-Za-z0-9_'\\+\\\\-\\\\\\.\\]\\*\\)\\[A-Za-z0-9_\\+-\\]@\\(\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
  },
  "constr": [Function],
  "def": {
    "checks": [
      {
        "$schema": "https://json-schema.org/draft-2020-12/schema",
        "format": "email",
        "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
        "type": "string",
      },
    ],
    "type": "string",
  },
  "deferred": [],
  "parse": [Function],
  "pattern": /\\^\\(\\?!\\\\\\.\\)\\(\\?!\\.\\*\\\\\\.\\\\\\.\\)\\(\\[A-Za-z0-9_'\\+\\\\-\\\\\\.\\]\\*\\)\\[A-Za-z0-9_\\+-\\]@\\(\\[A-Za-z0-9\\]\\[A-Za-z0-9\\\\-\\]\\*\\\\\\.\\)\\+\\[A-Za-z\\]\\{2,\\}\\$/,
  "run": [Function],
  "traits": Set {
    "ZodString",
    "$ZodString",
    "$ZodType",
    "_ZodString",
    "ZodType",
  },
}
`;

exports[`Environment checks > Zod imperfections > circular object schema has no sign of getter in its shape 1`] = `
{
  "features": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "$schema": "https://json-schema.org/draft-2020-12/schema",
      "items": {
        "properties": {
          "features": {
            "$ref": "#",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "features",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "writable": true,
  },
  "name": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "$schema": "https://json-schema.org/draft-2020-12/schema",
      "type": "string",
    },
    "writable": true,
  },
}
`;

exports[`Environment checks > Zod imperfections > meta overrides, does not merge 1`] = `
{
  "title": "last",
}
`;

exports[`Environment checks > Zod new features > input examples of transformations 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "examples": [
    "test",
  ],
  "type": "string",
}
`;

exports[`Environment checks > Zod new features > output examples of transformations 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "examples": [
    4,
  ],
}
`;
